test/code/test_class_tostring.out
B<class>

Catchable fatal error: Object of class A could not be converted to string in {{CWD}}/test/code/test_class_tostring.php on line 14
